# ass3

./: .gitignore  AlgorithmSettingsCommand.cpp  AlgorithmSettingsCommand.hpp  CLI.cpp  CLI.hpp  CMakeLists.txt  ClassifyCommand.cpp  ClassifyCommand.hpp  Command.cpp  Command.hpp  DefaultIO.cpp  DefaultIO.hpp  README.md  ServerDataManagement.cpp  ServerDataManagement.hpp  SocketIO.cpp  SocketIO.hpp  StandartIO.cpp  StandartIO.hpp  UploadCommand.cpp  UploadCommand.hpp  client.cpp  client.hpp  confusionMatrixCommand.cpp  confusionMatrixCommand.hpp  displayResCommand.cpp  displayResCommand.hpp  downloadResCommand.cpp  downloadResCommand.hpp  exitCommand.cpp  exitCommand.hpp  findKnnClasses.cpp  findKnnClasses.hpp  main.cpp  tcpServer.cpp  tcpServer.hpp
ass1/: CSVHandler.cpp  CSVHandler.hpp  classifiedFlower.cpp  classifiedFlower.hpp  dataHandler.cpp  dataHandler.hpp  findFlowerType.cpp  findFlowerType.hpp  flower.cpp  flower.hpp  knnGenerate.cpp  knnGenerate.hpp  unclassifiedFlower.cpp  unclassifiedFlower.hpp
ass2/: CMakeLists.txt  client.hpp  tcpServer.cpp  tcpServer.hpp  udpServer.cpp  udpServer.hpp
ass2/ass1/: CMakeLists.txt  CSVHandler.cpp  CSVHandler.hpp  findFlowerType.cpp  flower.hpp  knnGenerate.cpp  knnGenerate.hpp  unclassifiedFlower.cpp  unclassifiedFlower.hpp
resources/: Iris_test.csv  Iris_train.csv  Unclassified.csv  classified.csv  output.csv  penguins_test.csv  penguins_train.csv  results.txt  test.csv
